Ajout AUTH
