# docs/swagger.yaml
@@ -1,5 +1,15 @@
 basePath: /
 definitions:
+  routes.AuthRequest:
+    properties:
+      username:
+        type: string
+    type: object
+  routes.AuthResponse:
+    properties:
+      encryptedToken:
+        type: string
+    type: object
   routes.Message:
     properties:
       content:
@@ -11,10 +21,21 @@ definitions:
       senderId:
         type: integer
     type: object
-  routes.User:
+  routes.UserGet:
     properties:
       id:
         type: integer
+      publicKey:
+        type: string
+      username:
+        type: string
+    type: object
+  routes.UserPost:
+    properties:
+      id:
+        type: integer
+      publicKey:
+        type: string
       username:
         type: string
     type: object
@@ -31,6 +52,28 @@ info:
   title: My Test Api
   version: "1.0"
 paths:
+  /auth/token:
+    post:
+      consumes:
+      - application/json
+      description: Request a token for authentication
+      parameters:
+      - description: Authentication request
+        in: body
+        name: authRequest
+        required: true
+        schema:
+          $ref: '#/definitions/routes.AuthRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/routes.AuthResponse'
+      summary: Request a token
+      tags:
+      - auth
   /messages:
     get:
       consumes:
@@ -87,7 +130,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/routes.User'
+              $ref: '#/definitions/routes.UserGet'
             type: array
       summary: Return a list of user who a user speaks to
       tags:
@@ -132,7 +175,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/routes.User'
+              $ref: '#/definitions/routes.UserGet'
             type: array
       summary: Get all users
       tags:
@@ -147,14 +190,14 @@ paths:
         name: user
         required: true
         schema:
-          $ref: '#/definitions/routes.User'
+          $ref: '#/definitions/routes.UserPost'
       produces:
       - application/json
       responses:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/routes.User'
+            $ref: '#/definitions/routes.UserGet'
       summary: Create a new user
       tags:
       - users
@@ -175,7 +218,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/routes.User'
+            $ref: '#/definitions/routes.UserGet'
       summary: Get a user by ID
       tags:
       - users
